fix the loader , so it`s visible now

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,43 +102,22 @@ figure {
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #fff;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-bottom: 4px solid #efe81f;
   border-radius: 50%;
-  box-sizing: border-box;
-  position: relative;
-  animation: pulse 1s linear infinite;
-}
-.loader:after {
-  content: '';
+  display: none;
+  animation: spin 1s linear infinite;
   position: absolute;
-  width: 48px;
-  height: 48px;
-  border: 5px solid #fff;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  animation: scaleUp 1s linear infinite;
+  transform: translate(-50%);
 }
 
-@keyframes scaleUp {
+@keyframes spin {
   0% {
-    transform: translate(-50%, -50%) scale(0);
+    transform: rotate(0deg);
   }
-  60%,
   100% {
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-@keyframes pulse {
-  0%,
-  60%,
-  100% {
-    transform: scale(1);
-  }
-  80% {
-    transform: scale(1.2);
+    transform: rotate(360deg);
   }
 }
